--- a/Iris.ipynb
+++ b/Iris.ipynb
@@ -10,6 +10,19 @@
     "iris= load_iris()\n"
    ]
   },
+
+  {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "iris= load_iris()\n"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 35,
